fix: make changes after elements overflow check

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -84,15 +84,14 @@
 
   @media (min-width: $tablet-width-min) {
     width: 324px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
     gap: 15px;
   }
 
   @media (min-width: $desktop-width-min) {
     width: 360px;
-    gap: 43px;
+    gap: 42px;
   }
 
   p {
@@ -156,6 +155,7 @@
     font-family: $main-font;
     font-weight: 300;
     line-height: 22px;
+    margin: 0;
 
     @media (min-width: $tablet-width-min) {
       font-size: 16px;
